--- a/src/app/dashboard/evidence/evidence-submission/evidence-submission.component.html
+++ b/src/app/dashboard/evidence/evidence-submission/evidence-submission.component.html
@@ -13,13 +13,23 @@
                         <th>S.No</th>
                         <th>Categories </th>
                         <th>Observation</th>
+                        <th>Submitted</th>
+                        <th>Pending</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr class="tbody_data">
                         <td>C1</td>
                         <td>Production preparation</td>
-                      <td>  <button class="btn btn-primary">1</button></td>
+                        <td>
+                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
+                        </td>
                         
                     </tr>
                     <tr class="tbody_data">
@@ -29,13 +39,25 @@
                         <td>
                             <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
                         </td>
+                        <td>
+                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
+                        </td>
                         
                     </tr>
                     <tr class="tbody_data">
                         <td>C3</td>
                         <td>Changing management</td>
                         <td>
-                            <button class="btn btn-primary">3</button>
+                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
                         </td>
                         
                     </tr>
@@ -43,21 +65,41 @@
                         <td>C4</td>
                         <td>Changing management</td>
                         <td>
-                            <button class="btn btn-primary">0</button>
+                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
                         </td>
                         
                     </tr>
                     <tr class="tbody_data">
                         <td>C5</td>
                         <td>Changing management</td>
-                      <td>  <button class="btn btn-primary">1</button></td>
+                        <td>
+                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
+                        </td>
                         
                     </tr>
                     <tr class="tbody_data">
                         <td>C6</td>
                         <td>Quality audit and process verification</td>
                         <td>
-                            <button class="btn btn-primary">5</button>
+                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
                         </td>
                         
                     </tr>
@@ -65,7 +107,13 @@
                         <td>C7</td>
                         <td>Quality audit and process verification</td>
                         <td>
-                            <button  class="btn btn-primary">2</button>
+                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
                         </td>
                         
                     </tr>
@@ -73,21 +121,41 @@
                         <td>C8</td>
                         <td>Handling abnormality in quality</td>
                         <td>
-                            <button class="btn btn-primary">4</button>
+                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
                         </td>
                         
                     </tr>
                     <tr class="tbody_data">
                         <td>C9</td>
                         <td>Handling abnormality in quality</td>
-                      <td>  <button class="btn btn-primary">1</button></td>
+                        <td>
+                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
+                        </td>
                         
                     </tr>
                     <tr class="tbody_data">
                         <td>C10</td>
                         <td>Equipment/ Inspection equipment's managemen</td>
                         <td>
-                            <button  class="btn btn-primary">2</button>
+                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
                         </td>
                         
                     </tr>
@@ -95,7 +163,13 @@
                         <td>C11</td>
                         <td>Implementation of standards</td>
                         <td>
-                            <button  class="btn btn-primary">2</button>
+                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
                         </td>
                         
                     </tr>
@@ -103,21 +177,41 @@
                         <td>C12</td>
                         <td>Products management</td>
                         <td>
-                            <button class="btn btn-primary">8</button>
+                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
                         </td>
                         
                     </tr>
                     <tr class="tbody_data">
                         <td>C13</td>
                         <td>Handling Management</td>
-                      <td>  <button class="btn btn-primary">1</button></td>
+                        <td>
+                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
+                        </td>
                         
                     </tr>
                     <tr class="tbody_data">
                         <td>C14</td>
                         <td>Critical parts Management </td>
                         <td>
-                            <button class="btn btn-primary">2</button>
+                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
+                        </td>
+                        <td>
+                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
                         </td>
                         
                     </tr>
