--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -118,6 +118,14 @@
                   </p>
                 </a>
               </li>
+              <li class="nav-item" *ngIf="isSectionHead"> 
+                <a routerLink="/dashboard/evidence/section-data" class="nav-link">
+                  <img src="../../assets/icons/planning.png" class="side_img">
+                  <p>
+                    SectionHead Data
+                  </p>
+                </a>
+              </li>
               <!-- <li class="nav-item" *ngIf="isAuditor"> 
                 <a routerLink="/dashboard/action-pending-plan" class="nav-link">
                   <img src="../../assets/icons/planning.png" class="side_img">
