--- a/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
+++ b/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
@@ -6,10 +6,16 @@
                     <div class="card-header">
                         <div class="d-flex justif_space_betwen">
                         <h3 class="card-title">Create Plan Details</h3>
-                        <button class="btn btn-success d-flex align-items-center">
+                        <div class="d-flex">
+                        <button class="btn btn-primary d-flex align-items-center mr-1">
                             <i class="fas fa-upload mr-1 upload_ico"></i>
                             <span class="now_rap">Upload Plan</span>
                           </button>
+                          <button class="btn btn-success d-flex align-items-center">
+                            <i class="fas fa-upload mr-1 upload_ico"></i>
+                            <span class="now_rap">Download Template</span>
+                          </button>
+                          </div>
                           </div>
                     </div>
                       <form [formGroup]="createPlanForm">
