--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -17,7 +17,7 @@
     padding: 15px 30px;
     width: 30%;
     margin-right: 10px;
-    box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px !important;
+    box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px !important;
 }
 
 .counter_digit {
