--- a/src/app/dashboard/manage-audit/manage-audit-list/manage-audit-list.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-list/manage-audit-list.component.html
@@ -115,7 +115,7 @@
                                            
                                             <th>Status </th>
                                             <th *ngIf="isAuditor || isPlanner">View</th>
-                                            <th *ngIf="isAuditor || isSuperAdmin">Initiate Audit </th>
+                                            <th *ngIf="isAuditor || isSuperAdmin || isPlanner">Initiate Audit </th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -132,7 +132,7 @@
                                                 <a (click)="viewManageAudit()" data-toggle="tooltip" data-placement="top" title="Tooltip on top"><img
                                                         src="../../../../assets/icon/view.png" class="viwe_iamge"></a>
                                             </td>
-                                            <td *ngIf="isAuditor || isSuperAdmin">
+                                            <td *ngIf="isAuditor || isSuperAdmin || isPlanner">
                                                 <a (click)="initiateAudit(item)" data-toggle="tooltip" data-placement="top" title="Tooltip on top"><img
                                                         src="../../../../assets/icons/auditini.png" class="viwe_iamge"></a>
                                             </td>
