--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -110,7 +110,7 @@
                   </p>
                 </a>
               </li>
-              <li class="nav-item" *ngIf="isAuditor"> 
+              <li class="nav-item" *ngIf="isAuditor || isSectionHead"> 
                 <a routerLink="/dashboard/evidence/receive" class="nav-link">
                   <img src="../../assets/icons/planning.png" class="side_img">
                   <p>
@@ -133,7 +133,7 @@
             <a routerLink="/dashboard/evidence/section-data" class="nav-link">
               <img src="../../assets/icons/planning.png" class="side_img">
               <p>
-                SectionHead Data
+              Pending For Approval
               </p>
             </a>
           </li>
@@ -145,6 +145,14 @@
               </p>
             </a>
             
+          </li>
+          <li class="nav-item"  *ngIf="isAuditor || isSectionHead">
+            <a routerLink="/dashboard/action-plan/auditor" class="nav-link">
+              <img src="../../assets/icons/management.png" class="side_img">
+              <p>
+                Action Plan Auditor
+              </p>
+            </a>
           </li>
           <li class="nav-item"  *ngIf="isVendor">
             <a routerLink="/dashboard/action-plan" class="nav-link">
